After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769400 - reverse search in terminals is broken with vte-0.44.x
reverse search in terminals is broken with vte-0.44.x
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.44.x
Other Linux
: Normal normal
: vte-0-46
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-01 22:39 UTC by Wolfgang Ulbrich
Modified: 2016-09-20 12:24 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Wolfgang Ulbrich 2016-08-01 22:39:21 UTC
Reproducible wit gnome-terminal or mate-terminal (gtk3) with fedora 24.
I just bisect vte and culprit is

[rave@mother vte]$ git bisect good
d046ae112f5ca93378c2146c1ea239bc63778364 is the first bad commit
commit d046ae112f5ca93378c2146c1ea239bc63778364
Author: Christian Persch <chpe@gnome.org>
Date:   Sat Dec 26 12:27:22 2015 +0100

    widget: Correct end row in calls to get_text()
    
    We need to pass row+1 if we use -1 as end column to mean
    'all the text on the last row'.

:040000 040000 9cb6cc370e6fcd3f4efe44c2ffc5535ef904dad1 ede5257e598ba02e3ff62c3d523aa70378c4f2b0 M	src

merry christmas :)

Good is that reverting this single commit fixes latest fedora build for f24.
Comment 1 Wolfgang Ulbrich 2016-09-02 16:26:33 UTC
Hi again,
any chance that the commit can be reverted or improved?
.........i mean your own application is affected too.
Comment 2 Christian Persch 2016-09-17 18:34:26 UTC
Fixed on master, will cherry pick for 0.46.1.
Comment 3 Vlad Orlov 2016-09-19 14:06:08 UTC
Thanks. Will the fix make it to 0.44?
Comment 4 Vlad Orlov 2016-09-20 12:24:55 UTC
Ah, it's in that branch already. Should've looked at the commits earlier :)