widget: Fix backward search

Search was getting two lines of text at once, breaking backward search.
Problem was introduced in commit d046ae112f5ca93378c2146c1ea239bc63778364.

https://bugzilla.gnome.org/show_bug.cgi?id=769400
(cherry picked from commit d4d201f80ca1f401e39daab4c8e6bd0836e02696)