src/vte.cc
@@ -11050,9 +11050,8 @@ VteTerminalPrivate::search_rows(
 	GArray *attrs;
 	gdouble value, page_size;
 
-
 	row_text = get_text(start_row, 0,
-                            end_row + 1, -1,
+                            end_row, -1,
                             false /* block */,
                             true /* wrap */,
                             false /* include trailing whitespace */, /* FIXMEchpe maybe do include it since the match may depend on it? */
@@ -11133,7 +11132,7 @@ VteTerminalPrivate::search_rows(
 		m_search_attrs = g_array_new (FALSE, TRUE, sizeof (VteCharAttributes));
 	attrs = m_search_attrs;
 	row_text = get_text(start_row, 0,
-                            end_row + 1, -1,
+                            end_row, -1,
                             false /* block */,
                             true /* wrap */,
                             false /* include trailing whitespace */, /* FIXMEchpe maybe true? */
